--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "file-loader": "^1.1.11",
+    "node-fetch": "^2.2.0",
     "node-sass": "^4.9.2",
     "nodemon": "^1.18.3",
     "normalize.css": "^8.0.0",
